# tesser

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish-sdks.yml  release.yml
config/: default.toml
connectors/tesser-binance/: Cargo.toml
connectors/tesser-bybit/: Cargo.toml
connectors/tesser-paper/: Cargo.toml
docs/: next.config.mjs  package.json  pnpm-lock.yaml
docs/app/: global.css
docs/lib/: layout.shared.tsx  version.ts
patch/: release.patch
research/: README.md  pyproject.toml
research/scripts/: find_optimal_sma.py  optimize_rsi.py  train_ml_classifier.py
research/strategies/: pairs_trading.toml
scripts/: precommit.sh
sdk/tesser-py/: pyproject.toml
tesser/: Cargo.toml
tesser-backtester/: Cargo.toml
tesser-backtester/src/: lib.rs  reporting.rs
tesser-broker/: Cargo.toml
tesser-broker/src/: router.rs
tesser-cli/: Cargo.toml
tesser-cli/src/: alerts.rs  analyze.rs  app.rs  control.rs  data_validation.rs  lib.rs  live.rs  main.rs  state.rs  telemetry.rs
tesser-cli/tests/: backtest_stream.rs  data_engineering.rs  live_run.rs  monitoring_stream.rs
tesser-config/: Cargo.toml
tesser-cortex/: Cargo.toml  README.md
tesser-cortex/src/: engine_stub.rs  lib.rs
tesser-data/: Cargo.toml
tesser-events/: Cargo.toml
tesser-execution/: Cargo.toml
tesser-indicators/: Cargo.toml
tesser-journal/: Cargo.toml
tesser-ledger/: Cargo.toml
tesser-markets/: Cargo.toml
tesser-portfolio/: Cargo.toml
tesser-rpc/: Cargo.toml
tesser-strategy/: Cargo.toml
tesser-test-utils/: Cargo.toml
(+46 files in other folders)
